# portable-par

./: .gitignore  CMakeLists.txt  LICENSE  README.md  copy_so.md  copy_so.sh  if_you_get_a_missing_library_error.txt  main.cpp  so_list.txt
assets/map/: gradient.py
assets/mesh/: ball.mtl  map2.mtl  terrain.blend  terrain.blend1
assets/shaders/: debug_shadow_map.fs  dots.vs  passthrough.fs  passthrough.vs  phong.fs
include/: mesh.h  model.h  shader.h  shader_program.h  terrain.h  texture.h
portable_par_linux/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  gmtk-2023  ld-linux-x86-64.so.2  libEGL.so.1  libGL.so.1  libGLEW.so.2.2  libGLX.so.0  libGLdispatch.so.0  libOpenGL.so.0  libSDL2-2.0.so.0  libX11.so.6  libXau.so.6  libXdmcp.so.6  libbrotlicommon.so.1  libbrotlidec.so.1  libbrotlienc.so.1  libc.so.6  libgcc_s.so.1  libhwy.so.1  libjpeg.so.8  libjxl.so.0.8  liblzma.so.5  libm.so.6  libpng16.so.16  libsharpyuv.so.0  libtiff.so.6  libwebp.so.7  libxcb.so.1  libz.so.1  libzstd.so.1
portable_par_linux/.cmake/api/v1/reply/: cache-v2-7664533bff9e800d5338.json  cmakeFiles-v1-3e684e61bf54ab39b436.json  codemodel-v2-816f3ba27e5253080ba6.json  index-2023-07-08T18-49-54-0667.json  target-copy_assets-Debug-74a19ab4c7ae91f10803.json  (+1 more)
portable_par_linux/assets/map/: gradient.py
portable_par_linux/assets/mesh/: ball.blend  map1.mtl
portable_par_linux/assets/shaders/: debug_shadow_map.vs  dots.fs  passthrough.fs  phong.fs  shadow.vs
src/: main.cpp  mesh.cpp  model.cpp  shader.cpp  shader_program.cpp  terrain.cpp  texture.cpp
